# znote

./: README.md  index.html  package-lock.json  package.json  vite.config.js  znoteUI
src/: main.js  style.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs
src-tauri/src/commands/: export.rs  file_io.rs  folder.rs  mod.rs
src/commands/: file-ops.js
src/editor/: editor.js  theme.js
src/sidebar/: sidebar.js
src/statusbar/: statusbar.js
src/toolbar/: toolbar.js
